# Midi-Device-Mapper-for-Ableton-Live

./: .gitignore  CLAUDE.md  README.md  TODO.md  build.sh  deploy.sh  gen_reload.sh  generate_all.sh  guide.md  hud_protocol.md  inform.py  known_issues.md  nested_text.py  open_live.sh  parameter-update-requirements.md  pyproject.toml  reload.py  rt_test.py  tail_logs.sh
.claude/: settings.local.json
.run/: gen.run.xml
ableton_control_suface_as_code/: code.py  core_model.py  encoder_coords.py  gen.py  gen_code.py  gen_error.py  inform.py  mappings_model.py  model.py  model_controller.py  model_device.py  model_device_nav.py  model_functions.py  model_mixer.py  model_track_nav.py  model_transport.py  model_v1.py  model_v2.py  nested_text.py  parse.py  parser.py
ableton_control_surface_as_code/: behavior_doc.py  core_model.py  encoder_coords.py  family_intents.py  gen.py  gen_code.py  gen_error.py  hud_layout.py  model_clip.py  model_composition.py  model_controller.py  model_custom_devices.py  model_device.py  model_device_nav.py  model_functions.py  model_merges.py  model_mixer.py  model_parameter_pager.py  model_synth_zones.py  model_track_nav.py  model_transport.py  model_v2.py  slots.py  ui_api.py
ableton_hud/: .gitignore  CLAUDE.md  Info.plist  Package.swift  README.md  create-app-bundle.sh  dev-codesign-setup.sh  hud-hover-config-zoom.md  layout_principles.md  restart.sh
ck_custom/: __init__.py  ck_custom.py  deploy.sh
data/: custom_device_mappings.json  device_family_intents.json  devices.json  devices_12.json  gathered_20260507_201418.json  gathered_20260507_202333.json  list_device_params.sh  live_device_banks.py  synth_zone_tables.json  synth_zone_tables.md
dev-docs/: LOM - The Live Object Model.md  Live.md
docs/: beatspark.py  custom_device_mappings.md  mapping_file.md  user_manual.md
(+276 files in other folders)
