[tool.poetry]
name = "ableton-control-suface-as-code"
version = "0.1.0"
description = ""
authors = ["Charles Kubicek <charles.kubicek@springernature.com>"]
readme = "README.md"
packages = [{include = "ableton_control_suface_as_code"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.4"
autopep8 = "^2.2.0"
prettytable = "^3.10.0"
nestedtext = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
