[tool.poetry]
name = "ableton_control_surface_as_code"
version = "0.1.0"
description = ""
authors = ["Charles Kubicek <charles@kubi.cek>"]
readme = "README.md"
packages = [{include = "ableton_control_surface_as_code"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.8.2"
autopep8 = "^2.2.0"
prettytable = "^3.10.0"
nestedtext = "^3.7"
lark = "^1.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin]
version = "6.7.0"
disable-upx = true

[tool.poetry-pyinstaller-plugin.scripts]
mdma = { source = "ableton_control_surface_as_code/gen.py", type = "onefile", bundle = true}

[tool.poetry-pyinstaller-plugin.collect]
all = ['ableton_control_surface_as_code']